--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "22.5.0",
     "@types/react": "18.3.4",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-react-hooks": "^4.6.2",
@@ -33,7 +34,9 @@
     "globals": "^15.9.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.4.49",
     "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.16",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "5.5.4",
