--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mantine/core": "^7.14.3",
+    "@mantine/hooks": "^7.14.3",
+    "@mantine/modals": "^7.14.3",
+    "@mantine/notifications": "^7.14.3",
     "next": "^14.2.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -46,5 +51,8 @@
     "ts-node": "^10.9.2",
     "typescript": "5.5.4",
     "typescript-eslint": "^8.2.0"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
