--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "next": "^14.2.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "styled-components": "^6.1.13"
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -36,6 +36,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "22.5.0",
     "@types/react": "18.3.4",
+    "@types/styled-components": "^5.1.34",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.2",
@@ -45,6 +46,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.49",
+    "postcss-preset-mantine": "^1.17.0",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.16",
     "ts-jest": "^29.2.5",
