--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "test:auto": "jest --watch --coverage",
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "pnpm eslint . && next build"
   },
   "keywords": [],
@@ -22,7 +22,7 @@
     "@mantine/hooks": "^7.14.3",
     "@mantine/modals": "^7.14.3",
     "@mantine/notifications": "^7.14.3",
-    "next": "^14.2.6",
+    "next": "^15.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "styled-components": "^5.3.11"
