--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@mantine/hooks": "^7.14.3",
     "@mantine/modals": "^7.14.3",
     "@mantine/notifications": "^7.14.3",
+    "@tanstack/react-query": "^5.62.7",
+    "axios": "^1.7.9",
     "next": "^15.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -31,6 +33,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@jest/globals": "^29.7.0",
+    "@tanstack/eslint-plugin-query": "^5.62.1",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
